--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 		<%= stylesheet_link_tag    "branch-theme", :media => "all" %>
 		<%= stylesheet_link_tag    "application", :media => "all" %>
 
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		
 		<%= csrf_meta_tags %>
 	</head>
