--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,8 @@
 		<%= stylesheet_link_tag    "branch-theme", :media => "all" %>
 		<%= stylesheet_link_tag    "application", :media => "all" %>
 
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+		<meta name="viewport" content="user-scalable=0, initial-scale=1.0">
+		<meta name="apple-mobile-web-app-capable" content="yes" />
 		
 		<%= csrf_meta_tags %>
 	</head>
