github link fix

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -126,7 +126,7 @@
 								<li class="muted">·</li>
 								<li><a href="/blog/" target="_blank">Blog</a></li>
 								<li class="muted">·</li>
-								<li><a href="https://github.com/Xerax/Branch" target="_blank">Github</a></li>
+								<li><a href="https://github.com/TheTree/Branch" target="_blank">Github</a></li>
 							</ul>
 						</div>
 
