did a lot of work on le game history viewing and validation

--- a/app/assets/stylesheets/branch-theme.css
+++ b/app/assets/stylesheets/branch-theme.css
@@ -1088,3 +1088,8 @@ h1[id] {
   font-weight: 500;
   font-size: 12px;
 }
+
+/* 3rd level Nav Depth */
+li > .nav > li > .nav {
+  margin-left: 20px;
+}
