le spam demo data

--- a/app/views/halo4/game_history/index.html.erb
+++ b/app/views/halo4/game_history/index.html.erb
@@ -37,7 +37,126 @@
 
 					<tbody>
 						<tr>
+							<td>
+								<%= link_to 'Big Team Slayer', halo4_viewgame_path(game_id: '3635adab4110a433') %>
+							</td>
+							<td>1st</td>
+							<td>2/12/2013</td>
+							<td>Haven</td>
 							<td>Big Team Slayer</td>
+						</tr>
+						<tr>
+							<td>
+								<%= link_to 'Big Team Slayer', halo4_viewgame_path(game_id: '3635adab4110a433') %>
+							</td>
+							<td>1st</td>
+							<td>2/12/2013</td>
+							<td>Haven</td>
+							<td>Big Team Slayer</td>
+						</tr>
+						<tr>
+							<td>
+								<%= link_to 'Big Team Slayer', halo4_viewgame_path(game_id: '3635adab4110a433') %>
+							</td>
+							<td>1st</td>
+							<td>2/12/2013</td>
+							<td>Haven</td>
+							<td>Big Team Slayer</td>
+						</tr>
+						<tr>
+							<td>
+								<%= link_to 'Big Team Slayer', halo4_viewgame_path(game_id: '3635adab4110a433') %>
+							</td>
+							<td>1st</td>
+							<td>2/12/2013</td>
+							<td>Haven</td>
+							<td>Big Team Slayer</td>
+						</tr>
+						<tr>
+							<td>
+								<%= link_to 'Big Team Slayer', halo4_viewgame_path(game_id: '3635adab4110a433') %>
+							</td>
+							<td>1st</td>
+							<td>2/12/2013</td>
+							<td>Haven</td>
+							<td>Big Team Slayer</td>
+						</tr>
+						<tr>
+							<td>
+								<%= link_to 'Big Team Slayer', halo4_viewgame_path(game_id: '3635adab4110a433') %>
+							</td>
+							<td>1st</td>
+							<td>2/12/2013</td>
+							<td>Haven</td>
+							<td>Big Team Slayer</td>
+						</tr>
+						<tr>
+							<td>
+								<%= link_to 'Big Team Slayer', halo4_viewgame_path(game_id: '3635adab4110a433') %>
+							</td>
+							<td>1st</td>
+							<td>2/12/2013</td>
+							<td>Haven</td>
+							<td>Big Team Slayer</td>
+						</tr>
+						<tr>
+							<td>
+								<%= link_to 'Big Team Slayer', halo4_viewgame_path(game_id: '3635adab4110a433') %>
+							</td>
+							<td>1st</td>
+							<td>2/12/2013</td>
+							<td>Haven</td>
+							<td>Big Team Slayer</td>
+						</tr>
+						<tr>
+							<td>
+								<%= link_to 'Big Team Slayer', halo4_viewgame_path(game_id: '3635adab4110a433') %>
+							</td>
+							<td>1st</td>
+							<td>2/12/2013</td>
+							<td>Haven</td>
+							<td>Big Team Slayer</td>
+						</tr>
+						<tr>
+							<td>
+								<%= link_to 'Big Team Slayer', halo4_viewgame_path(game_id: '3635adab4110a433') %>
+							</td>
+							<td>1st</td>
+							<td>2/12/2013</td>
+							<td>Haven</td>
+							<td>Big Team Slayer</td>
+						</tr>
+						<tr>
+							<td>
+								<%= link_to 'Big Team Slayer', halo4_viewgame_path(game_id: '3635adab4110a433') %>
+							</td>
+							<td>1st</td>
+							<td>2/12/2013</td>
+							<td>Haven</td>
+							<td>Big Team Slayer</td>
+						</tr>
+						<tr>
+							<td>
+								<%= link_to 'Big Team Slayer', halo4_viewgame_path(game_id: '3635adab4110a433') %>
+							</td>
+							<td>1st</td>
+							<td>2/12/2013</td>
+							<td>Haven</td>
+							<td>Big Team Slayer</td>
+						</tr>
+						<tr>
+							<td>
+								<%= link_to 'Big Team Slayer', halo4_viewgame_path(game_id: '3635adab4110a433') %>
+							</td>
+							<td>1st</td>
+							<td>2/12/2013</td>
+							<td>Haven</td>
+							<td>Big Team Slayer</td>
+						</tr>
+						<tr>
+							<td>
+								<%= link_to 'Big Team Slayer', halo4_viewgame_path(game_id: '3635adab4110a433') %>
+							</td>
 							<td>1st</td>
 							<td>2/12/2013</td>
 							<td>Haven</td>
