--- a/app/views/halo4/game_history/view.html.erb
+++ b/app/views/halo4/game_history/view.html.erb
@@ -19,9 +19,23 @@
 		</div>
 
 		<div class="col-md-9">
-			<div class="bs-branch-section overview">
+			<div class="bs-branch-section game-details">
 				<div class="page-header">
 					<h1>Big Team Slayer on Valhalla</h1>
+				</div>
+
+				<div class="cover" style="background-image: url(https://assets.halowaypoint.com/games/h4/maps/v1/large/ragnarok.png)">
+					<div class="mask"></div>
+					<div class="inner">
+						<div class="victor-player-model hidden-xs" style="background-image: url(https://spartans.svc.halowaypoint.com/players/Swainooooo/h4/spartans/fullbody?target=medium)"></div>
+
+						<div class="title">
+							<h2>Griffball</h2>
+							<p>
+								11/07/2013 | <%= duration_to_friendly(@duration) %>
+							</p>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
