Work on game history cover

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,6 +23,13 @@ body {
 	float: left;
 }
 
+.seperator {
+	margin: 10px;
+	height: 1px;
+	border: 1px solid #aaa;
+	opacity: 0.6;
+}
+
 footer > .container > .row > .col-md-2 > .made-in {
 	font-size: 12px;
 	color: #aaa;
