--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,6 +23,11 @@ body {
 	float: left;
 }
 
+.focus-col {
+	text-align: right;
+	margin-top: 35px;
+}	
+
 .seperator {
 	margin: 10px;
 	height: 1px;
