--- a/app/views/halo4/game_history/view.html.erb
+++ b/app/views/halo4/game_history/view.html.erb
@@ -20,15 +20,18 @@
 
 		<div class="col-md-9">
 			<div class="bs-branch-section game-details">
-				<div class="page-header">
-					<h1>Capture the Flag on Valhalla</h1>
+				<div class="page-header row">
+					<div class="col-md-10">
+						<h1>Capture the Flag on Valhalla</h1>
+					</div>
+					<div class="col-md-2 focus-col">
+						<%= link_to raw('<span class="glyphicon glyphicon-star" style="padding-right: 8px;"></span>Favourite'), '#', { class: 'btn btn-default' } %>
+					</div>
 				</div>
 
 				<div class="cover" style="background-image: url(https://assets.halowaypoint.com/games/h4/maps/v1/large/ragnarok.png)">
 					<div class="mask">
 						<div class="inner">
-							<!-- <div class="victor-player-model hidden-xs" style="background-image: url(https://spartans.svc.halowaypoint.com/players/Swainooooo/h4/spartans/fullbody?target=medium)"></div> -->
-
 							<div class="title">
 								<h2>Capture the Flag</h2>
 								<p>
@@ -52,6 +55,11 @@
 							</div>
 						</div>
 					</div>
+					<div class="victor-player-model hidden-xs" style="background-image: url(https://spartans.svc.halowaypoint.com/players/Swainooooo/h4/spartans/fullbody?target=medium)"></div>
+				</div>
+
+				<div class="">
+
 				</div>
 			</div>
 		</div>
