Added CSR routing to sidebar

--- a/app/views/halo4/partials/_sidebar.html.erb
+++ b/app/views/halo4/partials/_sidebar.html.erb
@@ -27,7 +27,7 @@
 					<% end %>
 				</li>
 				<li class="<%= 'active' if content_for(:halo4_active) == 'csr' %>">
-					<%= link_to 'Competitive Skill Rank', '#' %>
+					<%= link_to 'Competitive Skill Rank', halo4_csr_path %>
 				</li>
 				<li class="<%= 'active' if content_for(:halo4_active) == 'commendations' %>">
 					<%= link_to 'Commendations', '#' %>
