--- a/app/views/halo4/competitive_skill_rank/index.html.erb
+++ b/app/views/halo4/competitive_skill_rank/index.html.erb
@@ -2,7 +2,209 @@
 <% content_for :title, "Halo 4 - iBotPeaches v5's CSR" %>	
 <% content_for :has_footer, true %>
 <% content_for :halo4_active, 'csr' %>
+<% content_for :scripts do %>
+<script>
+	var team_data = {
+		labels : [
+			"Dominion",
+			"<%= link_to 'Capture the Flag', '#' %>",
+			"Griffball",
+			"Team Doubles",
+			"Team Throwdown"
+		],
+		datasets : [
+			{
+				fillColor : "rgba(220,220,220,0.5)",
+				strokeColor : "rgba(220,220,220,1)",
+				pointColor : "rgba(220,220,220,1)",
+				pointStrokeColor : "#fff",
+				data : [
+					18,
+					22,
+					3,
+					14,
+					18
+				]
+			}
+		]
+	}
+
+	var indv_data = {
+		labels : [
+			"Infinity Slayer",
+			"Big Team Infinity Slayer",
+			"Flood",
+			"Team Snipers",
+			"SWAT",
+			"Multi-Team",
+			"Team Action Sack",
+			"Rumble Pit"
+		],
+		datasets : [
+			{
+				fillColor : "rgba(151,187,205,0.5)",
+				strokeColor : "rgba(151,187,205,1)",
+				pointColor : "rgba(151,187,205,1)",
+				pointStrokeColor : "#fff",
+				data : [
+					43,
+					45,
+					12,
+					25,
+					33,
+					47,
+					22,
+					49
+				]
+			}
+		]
+	}
+
+
+	var chr_team = document.getElementById("chart-team-csr").getContext("2d");
+	new Chart(chr_team).Radar(team_data);
+
+	var char_indv = document.getElementById("chart-indv-csr").getContext("2d");
+	new Chart(char_indv).Radar(indv_data);
+</script>
+<% end %>
 <% content_for :template, 'halo4 halo4_csr' %>
 
 <%= render partial: 'halo4/partials/header' %>
 
+<div class="container">
+	<div class="row">
+		<div class="col-md-3">
+			<%= render partial: 'halo4/partials/sidebar' %>
+		</div>
+
+		<div class="col-md-9">
+			<div class="bs-branch-section csr">
+				<div class="page-header">
+					<h1>iBotPeaches v5's CSR</h1>
+				</div>
+
+				<div class="row">
+
+					<div class="col-md-12">
+
+						<table class="table">
+							<thead>
+								<tr>
+									<th>
+										
+									</th>
+									<th>
+										Name
+									</th>
+									<th>
+										Description
+									</th>
+									<th>
+										Ranking
+									</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>
+										<img src="https://assets.halowaypoint.com/games/h4/playlists/v1/small/ctf.png" />
+									</td>
+									<td>
+										<%= link_to 'Capture the Flag', '#' %>
+									</td>
+									<td>
+										Capture and return the enemy’s Flag while protecting your own. 5 vs. 5.
+									</td>
+									<td>
+										<div class="csr-table-icon" style="background-image: url(https://assets.halowaypoint.com/games/h4/csr/v1/medium/50.png)"></div>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<img src="https://assets.halowaypoint.com/games/h4/playlists/v1/small/ctf.png" />
+									</td>
+									<td>
+										<%= link_to 'Capture the Flag', '#' %>
+									</td>
+									<td>
+										Capture and return the enemy’s Flag while protecting your own. 5 vs. 5.
+									</td>
+									<td>
+										<div class="csr-table-icon" style="background-image: url(https://assets.halowaypoint.com/games/h4/csr/v1/medium/50.png)"></div>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<img src="https://assets.halowaypoint.com/games/h4/playlists/v1/small/ctf.png" />
+									</td>
+									<td>
+										<%= link_to 'Capture the Flag', '#' %>
+									</td>
+									<td>
+										Capture and return the enemy’s Flag while protecting your own. 5 vs. 5.
+									</td>
+									<td>
+										<div class="csr-table-icon" style="background-image: url(https://assets.halowaypoint.com/games/h4/csr/v1/medium/50.png)"></div>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<img src="https://assets.halowaypoint.com/games/h4/playlists/v1/small/ctf.png" />
+									</td>
+									<td>
+										<%= link_to 'Capture the Flag', '#' %>
+									</td>
+									<td>
+										Capture and return the enemy’s Flag while protecting your own. 5 vs. 5.
+									</td>
+									<td>
+										<div class="csr-table-icon" style="background-image: url(https://assets.halowaypoint.com/games/h4/csr/v1/medium/50.png)"></div>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<img src="https://assets.halowaypoint.com/games/h4/playlists/v1/small/ctf.png" />
+									</td>
+									<td>
+										<%= link_to 'Capture the Flag', '#' %>
+									</td>
+									<td>
+										Capture and return the enemy’s Flag while protecting your own. 5 vs. 5.
+									</td>
+									<td>
+										<div class="csr-table-icon" style="background-image: url(https://assets.halowaypoint.com/games/h4/csr/v1/medium/50.png)"></div>
+									</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+
+					<!-- <div class="col-md-6">
+						<h1>Team CSR</h1>
+
+						<div class="outer-container">
+							<div class="inner-container">
+								<div class="canvas-container">
+									<canvas class="chart" id="chart-team-csr" width="350" height="350"></canvas>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-md-6">
+						<h1>Individual CSR</h1>
+
+						<div class="outer-container">
+							<div class="inner-container">
+								<div class="canvas-container">
+									<canvas class="chart" id="chart-indv-csr" width="350" height="350"></canvas>
+								</div>
+							</div>
+						</div>
+					</div> -->
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
