Updated csr index page

--- a/app/assets/stylesheets/halo4/competitive_skill_rank.css.scss
+++ b/app/assets/stylesheets/halo4/competitive_skill_rank.css.scss
@@ -5,7 +5,8 @@ body.halo4_csr {
 		height: auto;
 	}
 
-	.csr > .row > div > table > tbody > tr > td > .csr-table-icon {
+	.csr > .row > div > div > div > table 
+		> tbody > tr > td > .csr-table-icon {
 		background-repeat: no-repeat;
 		background-position: center;
 		width: 100px;
