--- a/app/views/halo4/competitive_skill_rank/index.html.erb
+++ b/app/views/halo4/competitive_skill_rank/index.html.erb
@@ -87,97 +87,144 @@
 				<div class="row">
 
 					<div class="col-md-12">
-
-						<table class="table">
-							<thead>
-								<tr>
-									<th>
-										
-									</th>
-									<th>
-										Name
-									</th>
-									<th>
-										Description
-									</th>
-									<th>
-										Ranking
-									</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr>
-									<td>
-										<img src="https://assets.halowaypoint.com/games/h4/playlists/v1/small/ctf.png" />
-									</td>
-									<td>
-										<%= link_to 'Capture the Flag', '#' %>
-									</td>
-									<td>
-										Capture and return the enemy’s Flag while protecting your own. 5 vs. 5.
-									</td>
-									<td>
-										<div class="csr-table-icon" style="background-image: url(https://assets.halowaypoint.com/games/h4/csr/v1/medium/50.png)"></div>
-									</td>
-								</tr>
-								<tr>
-									<td>
-										<img src="https://assets.halowaypoint.com/games/h4/playlists/v1/small/ctf.png" />
-									</td>
-									<td>
-										<%= link_to 'Capture the Flag', '#' %>
-									</td>
-									<td>
-										Capture and return the enemy’s Flag while protecting your own. 5 vs. 5.
-									</td>
-									<td>
-										<div class="csr-table-icon" style="background-image: url(https://assets.halowaypoint.com/games/h4/csr/v1/medium/50.png)"></div>
-									</td>
-								</tr>
-								<tr>
-									<td>
-										<img src="https://assets.halowaypoint.com/games/h4/playlists/v1/small/ctf.png" />
-									</td>
-									<td>
-										<%= link_to 'Capture the Flag', '#' %>
-									</td>
-									<td>
-										Capture and return the enemy’s Flag while protecting your own. 5 vs. 5.
-									</td>
-									<td>
-										<div class="csr-table-icon" style="background-image: url(https://assets.halowaypoint.com/games/h4/csr/v1/medium/50.png)"></div>
-									</td>
-								</tr>
-								<tr>
-									<td>
-										<img src="https://assets.halowaypoint.com/games/h4/playlists/v1/small/ctf.png" />
-									</td>
-									<td>
-										<%= link_to 'Capture the Flag', '#' %>
-									</td>
-									<td>
-										Capture and return the enemy’s Flag while protecting your own. 5 vs. 5.
-									</td>
-									<td>
-										<div class="csr-table-icon" style="background-image: url(https://assets.halowaypoint.com/games/h4/csr/v1/medium/50.png)"></div>
-									</td>
-								</tr>
-								<tr>
-									<td>
-										<img src="https://assets.halowaypoint.com/games/h4/playlists/v1/small/ctf.png" />
-									</td>
-									<td>
-										<%= link_to 'Capture the Flag', '#' %>
-									</td>
-									<td>
-										Capture and return the enemy’s Flag while protecting your own. 5 vs. 5.
-									</td>
-									<td>
-										<div class="csr-table-icon" style="background-image: url(https://assets.halowaypoint.com/games/h4/csr/v1/medium/50.png)"></div>
-									</td>
-								</tr>
-							</tbody>
-						</table>
+						<ul class="nav nav-tabs" style="margin-bottom: 15px;">
+							<li class="active">
+								<a href="#team" data-toggle="tab">Team</a>
+							</li>
+							<li class="">
+								<a href="#individual" data-toggle="tab">Individual</a>
+							</li>
+						</ul>
+						<div id="myTabContent" class="tab-content">
+							<div class="tab-pane fade active in" id="team">
+								<table class="table">
+									<thead>
+										<tr>
+											<th>
+												
+											</th>
+											<th>
+												Name
+											</th>
+											<th>
+												Description
+											</th>
+											<th>
+												Ranking
+											</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>
+												<img src="https://assets.halowaypoint.com/games/h4/playlists/v1/small/ctf.png" />
+											</td>
+											<td>
+												<%= link_to 'Capture the Flag', '#' %>
+											</td>
+											<td>
+												Capture and return the enemy’s Flag while protecting your own. 5 vs. 5.
+											</td>
+											<td>
+												<div class="csr-table-icon" style="background-image: url(https://assets.halowaypoint.com/games/h4/csr/v1/medium/50.png)"></div>
+											</td>
+										</tr>
+										<tr>
+											<td>
+												<img src="https://assets.halowaypoint.com/games/h4/playlists/v1/small/ctf.png" />
+											</td>
+											<td>
+												<%= link_to 'Capture the Flag', '#' %>
+											</td>
+											<td>
+												Capture and return the enemy’s Flag while protecting your own. 5 vs. 5.
+											</td>
+											<td>
+												<div class="csr-table-icon" style="background-image: url(https://assets.halowaypoint.com/games/h4/csr/v1/medium/50.png)"></div>
+											</td>
+										</tr>
+										<tr>
+											<td>
+												<img src="https://assets.halowaypoint.com/games/h4/playlists/v1/small/ctf.png" />
+											</td>
+											<td>
+												<%= link_to 'Capture the Flag', '#' %>
+											</td>
+											<td>
+												Capture and return the enemy’s Flag while protecting your own. 5 vs. 5.
+											</td>
+											<td>
+												<div class="csr-table-icon" style="background-image: url(https://assets.halowaypoint.com/games/h4/csr/v1/medium/50.png)"></div>
+											</td>
+										</tr>
+										<tr>
+											<td>
+												<img src="https://assets.halowaypoint.com/games/h4/playlists/v1/small/ctf.png" />
+											</td>
+											<td>
+												<%= link_to 'Capture the Flag', '#' %>
+											</td>
+											<td>
+												Capture and return the enemy’s Flag while protecting your own. 5 vs. 5.
+											</td>
+											<td>
+												<div class="csr-table-icon" style="background-image: url(https://assets.halowaypoint.com/games/h4/csr/v1/medium/50.png)"></div>
+											</td>
+										</tr>
+										<tr>
+											<td>
+												<img src="https://assets.halowaypoint.com/games/h4/playlists/v1/small/ctf.png" />
+											</td>
+											<td>
+												<%= link_to 'Capture the Flag', '#' %>
+											</td>
+											<td>
+												Capture and return the enemy’s Flag while protecting your own. 5 vs. 5.
+											</td>
+											<td>
+												<div class="csr-table-icon" style="background-image: url(https://assets.halowaypoint.com/games/h4/csr/v1/medium/50.png)"></div>
+											</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+							<div class="tab-pane fade" id="individual">
+								<table class="table">
+									<thead>
+										<tr>
+											<th>
+												
+											</th>
+											<th>
+												Name
+											</th>
+											<th>
+												Description
+											</th>
+											<th>
+												Ranking
+											</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>
+												<img src="https://assets.halowaypoint.com/games/h4/playlists/v1/small/rumblepit-597a7a44-1c64-4996-91e1-27cd7281eeb4.png" />
+											</td>
+											<td>
+												<%= link_to 'Rumble Pit', '#' %>
+											</td>
+											<td>
+												Kill enemy Spartans in a selection of Infinity and Pro Rumble variants. 8 player FFA.
+											</td>
+											<td>
+												<div class="csr-table-icon" style="background-image: url(https://assets.halowaypoint.com/games/h4/csr/v1/medium/50.png)"></div>
+											</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+						</div>
 					</div>
 
 					<!-- <div class="col-md-6">
