--- a/app/views/halo4/competitive_skill_rank/index.html.erb
+++ b/app/views/halo4/competitive_skill_rank/index.html.erb
@@ -120,7 +120,7 @@
 												<img src="https://assets.halowaypoint.com/games/h4/playlists/v1/small/ctf.png" />
 											</td>
 											<td>
-												<%= link_to 'Capture the Flag', '#' %>
+												<%= link_to 'Capture the Flag', halo4_csr_details_path(gamertag: @gamertag, id: '10') %>
 											</td>
 											<td>
 												Capture and return the enemy’s Flag while protecting your own. 5 vs. 5.
@@ -134,7 +134,7 @@
 												<img src="https://assets.halowaypoint.com/games/h4/playlists/v1/small/ctf.png" />
 											</td>
 											<td>
-												<%= link_to 'Capture the Flag', '#' %>
+												<%= link_to 'Capture the Flag', halo4_csr_details_path(gamertag: @gamertag, id: '10') %>
 											</td>
 											<td>
 												Capture and return the enemy’s Flag while protecting your own. 5 vs. 5.
@@ -148,7 +148,7 @@
 												<img src="https://assets.halowaypoint.com/games/h4/playlists/v1/small/ctf.png" />
 											</td>
 											<td>
-												<%= link_to 'Capture the Flag', '#' %>
+												<%= link_to 'Capture the Flag', halo4_csr_details_path(gamertag: @gamertag, id: '10') %>
 											</td>
 											<td>
 												Capture and return the enemy’s Flag while protecting your own. 5 vs. 5.
@@ -162,7 +162,7 @@
 												<img src="https://assets.halowaypoint.com/games/h4/playlists/v1/small/ctf.png" />
 											</td>
 											<td>
-												<%= link_to 'Capture the Flag', '#' %>
+												<%= link_to 'Capture the Flag', halo4_csr_details_path(gamertag: @gamertag, id: '10') %>
 											</td>
 											<td>
 												Capture and return the enemy’s Flag while protecting your own. 5 vs. 5.
@@ -176,7 +176,7 @@
 												<img src="https://assets.halowaypoint.com/games/h4/playlists/v1/small/ctf.png" />
 											</td>
 											<td>
-												<%= link_to 'Capture the Flag', '#' %>
+												<%= link_to 'Capture the Flag', halo4_csr_details_path(gamertag: @gamertag, id: '10') %>
 											</td>
 											<td>
 												Capture and return the enemy’s Flag while protecting your own. 5 vs. 5.
@@ -212,7 +212,7 @@
 												<img src="https://assets.halowaypoint.com/games/h4/playlists/v1/small/rumblepit-597a7a44-1c64-4996-91e1-27cd7281eeb4.png" />
 											</td>
 											<td>
-												<%= link_to 'Rumble Pit', '#' %>
+												<%= link_to 'Rumble Pit', halo4_csr_details_path(gamertag: @gamertag, id: '10') %>
 											</td>
 											<td>
 												Kill enemy Spartans in a selection of Infinity and Pro Rumble variants. 8 player FFA.
