added a few random entries

--- a/app/views/halo4/competitive_skill_rank/index.html.erb
+++ b/app/views/halo4/competitive_skill_rank/index.html.erb
@@ -221,6 +221,48 @@
 												<div class="csr-table-icon" style="background-image: url(https://assets.halowaypoint.com/games/h4/csr/v1/medium/50.png)"></div>
 											</td>
 										</tr>
+										<tr>
+											<td>
+												<img src="https://assets.halowaypoint.com/games/h4/playlists/v1/small/rumblepit-597a7a44-1c64-4996-91e1-27cd7281eeb4.png" />
+											</td>
+											<td>
+												<%= link_to 'Rumble Pit', halo4_csr_details_path(gamertag: @gamertag, id: '10') %>
+											</td>
+											<td>
+												Kill enemy Spartans in a selection of Infinity and Pro Rumble variants. 8 player FFA.
+											</td>
+											<td>
+												<div class="csr-table-icon" style="background-image: url(https://assets.halowaypoint.com/games/h4/csr/v1/medium/50.png)"></div>
+											</td>
+										</tr>
+										<tr>
+											<td>
+												<img src="https://assets.halowaypoint.com/games/h4/playlists/v1/small/rumblepit-597a7a44-1c64-4996-91e1-27cd7281eeb4.png" />
+											</td>
+											<td>
+												<%= link_to 'Rumble Pit', halo4_csr_details_path(gamertag: @gamertag, id: '10') %>
+											</td>
+											<td>
+												Kill enemy Spartans in a selection of Infinity and Pro Rumble variants. 8 player FFA.
+											</td>
+											<td>
+												<div class="csr-table-icon" style="background-image: url(https://assets.halowaypoint.com/games/h4/csr/v1/medium/50.png)"></div>
+											</td>
+										</tr>
+										<tr>
+											<td>
+												<img src="https://assets.halowaypoint.com/games/h4/playlists/v1/small/rumblepit-597a7a44-1c64-4996-91e1-27cd7281eeb4.png" />
+											</td>
+											<td>
+												<%= link_to 'Rumble Pit', halo4_csr_details_path(gamertag: @gamertag, id: '10') %>
+											</td>
+											<td>
+												Kill enemy Spartans in a selection of Infinity and Pro Rumble variants. 8 player FFA.
+											</td>
+											<td>
+												<div class="csr-table-icon" style="background-image: url(https://assets.halowaypoint.com/games/h4/csr/v1/medium/50.png)"></div>
+											</td>
+										</tr>
 									</tbody>
 								</table>
 							</div>
