Tweaked position of car rank icon

--- a/app/assets/stylesheets/halo4/competitive_skill_rank.css.scss
+++ b/app/assets/stylesheets/halo4/competitive_skill_rank.css.scss
@@ -41,7 +41,7 @@ body.halo4_csr {
 			}
 
 			> .playlist-data {
-				background-position: bottom right;
+				background-position: 5% 100%;
 				background-repeat: no-repeat;
 				min-height: 260px;
 
