added links to the sidebar

--- a/app/views/halo4/partials/_sidebar.html.erb
+++ b/app/views/halo4/partials/_sidebar.html.erb
@@ -32,8 +32,8 @@
 				<li class="<%= 'active' if content_for(:halo4_active) == 'commendations' %>">
 					<%= link_to 'Commendations', '#' %>
 				</li>
-				<li class="<%= 'active' if content_for(:halo4_active) == 'specializations' %>">
-					<%= link_to 'Specializations', '#' %>
+				<li class="<%= 'active' if content_for(:halo4_active) == 'specialization' %>">
+					<%= link_to 'Specializations', halo4_specialization_path %>
 				</li>
 			</ul>
 		</li>
