--- a/app/views/halo4/partials/_sidebar.html.erb
+++ b/app/views/halo4/partials/_sidebar.html.erb
@@ -30,7 +30,27 @@
 					<%= link_to 'Competitive Skill Rank', halo4_csr_path %>
 				</li>
 				<li class="<%= 'active' if content_for(:halo4_active) == 'commendations' %>">
-					<%= link_to 'Commendations', '#' %>
+					<%= link_to 'Commendations', halo4_commendations_path %>
+
+					<% if content_for(:halo4_active) == 'commendations' %>
+						<ul class="nav">
+							<li class="<%= 'active' if content_for(:halo4_commendations_active) == 'weapon' %>">
+								<%= link_to 'Weapons', halo4_commendations_path( sub_view: 'weapon' ) %>
+							</li>
+							<li class="<%= 'active' if content_for(:halo4_commendations_active) == 'enemy' %>">
+								<%= link_to 'Enemies', halo4_commendations_path( sub_view: 'enemy' ) %>
+							</li>
+							<li class="<%= 'active' if content_for(:halo4_commendations_active) == 'vehicle' %>">
+								<%= link_to 'Vehicles', halo4_commendations_path( sub_view: 'vehicle' ) %>
+							</li>
+							<li class="<%= 'active' if content_for(:halo4_commendations_active) == 'player' %>">
+								<%= link_to 'Player', halo4_commendations_path( sub_view: 'player' ) %>
+							</li>
+							<li class="<%= 'active' if content_for(:halo4_commendations_active) == 'game_type' %>">
+								<%= link_to 'Game Types', halo4_commendations_path( sub_view: 'game-type' ) %>
+							</li>
+						</ul>
+					<% end %>
 				</li>
 				<li class="<%= 'active' if content_for(:halo4_active) == 'specialization' %>">
 					<%= link_to 'Specializations', halo4_specialization_path %>
