Moved social buttons shit into partial

--- a/app/views/home/welcome.html.erb
+++ b/app/views/home/welcome.html.erb
@@ -18,47 +18,7 @@
 			</li>
 		</ul>
 
-		<!-- Social Networks are such a fad -->
-		<ul class="social-media-shit">
-			<li>
-				<!-- NeckbeardHub -->
-				<iframe src="http://ghbtns.com/github-btn.html?user=xerax&repo=branch&type=watch" 
-					allowtransparency="true" 
-					frameborder="0" 
-					scrolling="0" 
-					width="50" 
-					height="20"></iframe>
-			</li>
-
-			<li>
-				<!-- NeckbeardHub 2 -->
-				<iframe src="http://ghbtns.com/github-btn.html?user=xerax&repo=branch&type=fork" 
-					allowtransparency="true" 
-					frameborder="0" 
-					scrolling="0" 
-					width="55" 
-					height="20"></iframe>
-			</li>
-
-			<li>
-				<!-- Fuckbook -->
-				<div class="fb-like" 
-					data-href="http://developers.facebook.com/docs/reference/plugins/like" 
-					data-width="100" 
-					data-layout="button_count" 
-					data-show-faces="true" 
-					data-send="false"></div>
-			</li>
-
-			<li>
-				<!-- Twitter -->
-				<a href="https://twitter.com/share" 
-					class="twitter-share-button" 
-					data-via="alexerax" 
-					data-hashtags="branchapp" 
-					data-dnt="true">Tweet</a>
-			</li>
-		</ul>
+		<%= render partial: 'home/social_buttons' %>
 	</div>
 </div>
 
