--- a/app/views/halo4/commendations/index.html.erb
+++ b/app/views/halo4/commendations/index.html.erb
@@ -23,6 +23,34 @@
 				<div class="page-header">
 					<h1><%= @friendly_name %> Commendations</h1>
 				</div>
+
+				<div class="row">
+					<% 12.times do |i| %>
+						<div class="col-md-6 entry">
+							<div class="title">
+								<span class="numerical">7/7</span>
+								Battle Rifle - Master</div>
+							<div class="description">Kill enemy Spartans with the Battle Rifle</div>
+
+							<div class="progression">
+								<div class="points">
+									<div class="lower">0</div>
+									<div class="upper">1337</div>
+									<div class="clearfix"></div>
+								</div>
+
+								<div class="progress progress-striped active">
+									<div class="progress-bar"  role="progressbar" aria-valuenow="69" aria-valuemin="0" aria-valuemax="100" style="width: 69%">
+										<span class="sr-only">69% Complete</span>
+										<span class="progress-bar-indicator">69% Complete</span>
+									</div>
+								</div>
+							</div>
+							<hr />
+						</div>
+					<% end %>
+				</div>
+
 			</div>
 		</div>
 	</div>
