make responsiveness look nicer =]

--- a/app/views/halo4/commendations/index.html.erb
+++ b/app/views/halo4/commendations/index.html.erb
@@ -26,7 +26,7 @@
 
 				<div class="row">
 					<% 12.times do |i| %>
-						<div class="col-md-6 entry">
+						<div class="col-lg-5 col-md-6 entry">
 							<div class="title">
 								<span class="numerical">7/7</span>
 								Battle Rifle - Master</div>
@@ -48,9 +48,9 @@
 							</div>
 							<hr />
 						</div>
+						<div class="visible-lg col-md-1"></div>
 					<% end %>
 				</div>
-
 			</div>
 		</div>
 	</div>
