--- a/app/assets/stylesheets/halo4/commendations.css.scss
+++ b/app/assets/stylesheets/halo4/commendations.css.scss
@@ -11,12 +11,14 @@ body.halo4_commendations {
 			}
 			> .description {
 				font-size: 14px;
+				color: #aaa;
 			}
 
 			> .progression {
 				margin-top: 20px;
 				> .points {
 					display: inline;
+					color: #aaa;
 					> .lower {
 						float: left;
 					}
