added dnf indicator

--- a/app/assets/stylesheets/halo4/game_history.css.scss
+++ b/app/assets/stylesheets/halo4/game_history.css.scss
@@ -80,8 +80,8 @@ body.halo4_game_history {
 
 				> tbody {
 					> tr {
-						.end-dnf {
-
+						&.end-dnf {
+							background-color: #eee;
 						}
 						> td {
 							.player-emblem {
