--- a/app/views/halo4/game_history/view.html.erb
+++ b/app/views/halo4/game_history/view.html.erb
@@ -114,8 +114,8 @@
 						<tbody>
 							<% 5.times do |i| %>
 								<% dnf = 'end-dnf' if rand(0..4) == 1 %>
-								<tr>
-									<td class="<%= dnf %>">
+								<tr class="<%= dnf %>">
+									<td>
 										<div class="player-emblem" style="background-color: #D96551; background-image: url(https://emblems.svc.halowaypoint.com/h4/emblems/brick_cyan_stuck-on-steel_circle?size=48);"></div>
 										<div class="player-gamertag">
 											<%= link_to 'Xerax', halo4_servicerecord_path(gamertag: 'xerax') %>
@@ -166,8 +166,8 @@
 						<tbody>
 							<% 5.times do |i| %>
 								<% dnf = 'end-dnf' if rand(0..4) == 1 %>
-								<tr>
-									<td class="<%= dnf %>">
+								<tr class="<%= dnf %>">
+									<td>
 										<div class="player-emblem" style="background-color: #6384B0; background-image: url(https://emblems.svc.halowaypoint.com/h4/emblems/brick_cyan_stuck-on-steel_circle?size=48);"></div>
 										<div class="player-gamertag">
 											<%= link_to 'Xerax', halo4_servicerecord_path(gamertag: 'xerax') %>
